--- a/index-20240905MI.html
+++ b/index-20240905MI.html
@@ -1,3 +1,13 @@
-Nama   : Muhammad Ilzam
-NPM    : 2208107010087
-Kelas  : POPL A
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="widtg=device-width, initial-scalel=1.0">
+        <title> Document</title>
+    </head>
+    <body> 
+        <h1> Muhammad Ilzam</h1>
+        <h2> 2208107010012</h2>
+        <h3> Kelas A </h3>
+    </body>
+</html>
