--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         </tr>
         <tr>
             <td>Tidak ada anggota.</td>
-            <td><a href="2208107010081.html">Dinda Maharani</a></td>
-            <td> <a href="2208107010087.html">Muhammad Ilzam</a></td>
+            <td><a href="index-20230905DM.html">Dinda Maharani</a></td>
+            <td> <a href="index-20230905MI.html">Muhammad Ilzam</a></td>
       </tr>
     </table>
   </body>
