--- a/index-20240905DM.html
+++ b/index-20240905DM.html
@@ -1,3 +1,13 @@
-Nama: Dinda maharani
-NPM: 2208107010081
-Kelas: POPL-A
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="widtg=device-width, initial-scalel=1.0">
+        <title> Document</title>
+    </head>
+    <body> 
+        <h1> Dinda Maharani</h1>
+        <h2> 2208107010081</h2>
+        <h3> Kelas A </h3>
+    </body>
+</html>
